# pith-cli

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pith/: __main__.py  cli.py  output.py  parser.py
src/pith/commands/: batch.py  check.py  compare.py  extract.py  lint.py  scan.py  stats.py  structure.py
